Review Request 8227 see PLS-3178 - fixed category name alignment

--- a/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
+++ b/le-ui/projects/common/components/datacloud/explorer/explorer.component.scss
@@ -146,7 +146,6 @@
                         font-size: 20px;
                         .category-label {
                             max-height: 45px;
-                            padding-right: 1.7em;
                         }
                     }
                     .count {
